# elidupree-projects-manager

./: .gitignore  Cargo.toml  README.md
src/: data_format.rs  main.rs  management.rs  webserver_glue.rs
static/: index.html
static/media/: index.js  style.css
