[package]
name = "elidupree-projects-manager"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
actix-web = "4.0.1"
actix-files = "0.6.0"
actix-web-actors = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4.19", features = ["serde"] }
nalgebra = { version = "0.30.1", features = ["serde-serialize"] }
