[package]
name = "elidupree-projects-manager"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
actix = "0.13.0"
actix-web = { version = "4.0.1", features = ["rustls"] }
actix-files = "0.6.0"
actix-web-actors = "4.1.0"
rustls = "0.20.4"
rustls-pemfile = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.56"

chrono = { version = "0.4.19", features = ["serde"] }
nalgebra = { version = "0.30.1", features = ["serde-serialize"] }
