[package]
name = "elidupree-projects-manager"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
actix = "0.13.5"
actix-web = { version = "4.9.0", features = ["rustls"] }
actix-files = "0.6.6"
actix-web-actors = "4.3.1"
rustls = "0.20.9"
rustls-pemfile = "0.3.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
nalgebra = { version = "0.30.1", features = ["serde-serialize"] }

anyhow = "1.0.95"

